[gd_scene load_steps=2 format=3 uid="uid://b85i3ku3iripg"]

[ext_resource type="Script" path="res://scriptes/kill_zone.gd" id="1_gf6yx"]

[node name="KillZone" type="Area2D" groups=["kill_zone_group"]]
collision_layer = 8
collision_mask = 2
script = ExtResource("1_gf6yx")

[node name="Timer" type="Timer" parent="."]
one_shot = true

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
